--- a/WinForm/Languages/Chinese.xml
+++ b/WinForm/Languages/Chinese.xml
@@ -2,8 +2,8 @@
 
 
  <Chinese>
-     <Login_UserName>用户名#</Login_UserName>
-     <Login_UserPwd>密码#</Login_UserPwd>
+     <Login_UserName>用户名</Login_UserName>
+     <Login_UserPwd>密码</Login_UserPwd>
      <Login_Login>登录</Login_Login>
   
 </Chinese>
